Add header title and nav links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Broadway</title>
   </head>
   <body>
-
+    <header>
+      <h1>Broadway Design</h1>
+        <span><a href="#home">Home</a></span>
+        <span><a href="#process">Process</a></span>
+        <span><a href="#work">Work</a></span>
+        <span><a href="#team">Team</a></span>
+        <span><a href="#contact">Contact</a></span>
+    </header>
   </body>
 </html>
