Add icons and statements to body

--- a/index.html
+++ b/index.html
@@ -8,11 +8,20 @@
   <body>
     <header>
       <h1>Broadway Design</h1>
-        <span><a href="#home">Home</a></span>
-        <span><a href="#process">Process</a></span>
-        <span><a href="#work">Work</a></span>
-        <span><a href="#team">Team</a></span>
-        <span><a href="#contact">Contact</a></span>
+        <p><a href="#home">Home</a></p>
+        <p><a href="#process">Process</a></p>
+        <p><a href="#work">Work</a></p>
+        <p><a href="#team">Team</a></p>
+        <p><a href="#contact">Contact</a></p>
     </header>
+    <h2>Our Process</h2>
+      <img src="./resources/images/identify.svg">
+      <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
+      <img src="./resources/images/understand.svg">
+      <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      <img src="./resources/images/execute.svg">
+        <p>We put everything we have into our work.</p>
   </body>
 </html>
