--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Broadway</title>
   </head>
   <body>
-    <header>
+    <header id="home">
       <h1>Broadway Design</h1>
         <p><a href="#home">Home</a></p>
         <p><a href="#process">Process</a></p>
@@ -14,6 +14,7 @@
         <p><a href="#team">Team</a></p>
         <p><a href="#contact">Contact</a></p>
     </header>
+    <section id="process">
     <h2>Our Process</h2>
       <img src="./resources/images/identify.svg">
       <h3>Identify</h3>
@@ -23,5 +24,23 @@
         <p>We study our projects inside and out.</p>
       <img src="./resources/images/execute.svg">
         <p>We put everything we have into our work.</p>
+    </section>
+    <h3>Designed in New York</h3>
+    <h3 id="work">Portfolio</h3>
+      <p>Coming Soon</p>
+    <h3 id="team">Team</h3>
+      <p>We're Hiring!</p>
+    <h3 id="contact">Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>Email: test@example.com</p>
+      <p>Twitter: @test</p>
+    <footer>
+      <span>&copy Broadway 2016</span>
+      <span><a href="#home">Home</a></span>
+      <span><a href="#about">About</a></span>
+      <span><a href="#work">Work</a></span>
+      <span><a href="#team">Team</a></span>
+      <span><a href="#contact">Contact</a></span>
+    </footer>
   </body>
 </html>
