--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <img src="./resources/images/execute.svg">
         <p>We put everything we have into our work.</p>
     </section>
-    <h3>Designed in New York</h3>
+
+    <h3 id="about">Designed in New York</h3>
     <h3 id="work">Portfolio</h3>
       <p>Coming Soon</p>
     <h3 id="team">Team</h3>
@@ -35,7 +36,7 @@
       <p>Email: test@example.com</p>
       <p>Twitter: @test</p>
     <footer>
-      <span>&copy Broadway 2016</span>
+      <span class="copy">&copy Broadway 2016</span>
       <span><a href="#home">Home</a></span>
       <span><a href="#about">About</a></span>
       <span><a href="#work">Work</a></span>
